Hierarchical filter menus: fix iOS/Safari momentum scrolling vs overflow bug.
In iOS/Safari, the second column of the ProductTypes and the Materials
filters wasn't showing up, it was clipped as if the parent had
overflow:hidden set. The fix was to move them out of the parent <li>.

--- a/resources/assets/js/Collection/Filters/Materials.scss
+++ b/resources/assets/js/Collection/Filters/Materials.scss
@@ -31,8 +31,9 @@
   }
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow-x: visible;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   background-color: $blue-medium;
   color: white;
   list-style: none;
@@ -145,8 +146,10 @@
     height: 100vh;
   }
   background-color: $blue-dark;
+  color: #fff;
   // padding-left: 25px;
-  overflow-y: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 
   transition: opacity 0.15s ease-in-out;
   &.desktopFilterPanel-enter {
