--- a/resources/assets/js/Collection/Filters/ProductTypes.scss
+++ b/resources/assets/js/Collection/Filters/ProductTypes.scss
@@ -25,8 +25,8 @@
   }
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow-x: visible;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: contain;
   background-color: $pink-light;
